# awesome-kernels

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: docusaurus.config.ts  package-lock.json
docs/blog/: 2024-01-15-kernel-ridge-regression.md  2024-01-20-random-fourier-features.md  2024-01-25-mmd-two-sample-test.md  authors.yml  tags.yml
docs/docs/: intro.md
docs/docs/core-theory/: _category_.json  integral-operators-2007.md  optimal-rates-2007.md  stability-generalization-2002.md
docs/docs/deep-kernels/: _category_.json  arc-cosine-kernels-2009.md  deep-kernel-learning-2016.md  initialization-power-2016.md
docs/docs/dependence-measures/: _category_.json  conditional-dependence-2007.md  hsic-2005.md  kci-test-2011.md
docs/docs/gaussian-processes/: _category_.json  gp-kernel-review-2018.md  gpml-2006.md
docs/docs/kernel-approximation/: _category_.json  leverage-scores-2017.md  nystrom-regularization-2015.md  random-features-curse-2017.md
docs/docs/kernel-embeddings/: _category_.json  mean-embeddings-2007.md  mmd-2012.md
docs/docs/kernel-learning/: _category_.json  kernel-pca-1998.md  random-features-2007.md
docs/docs/modern-advances/: _category_.json  ntk-2018.md  nystrom-2000.md
docs/docs/multiple-kernel-learning/: _category_.json  mkl-algorithms-2011.md  mkl-conic-duality-2004.md  mkl-sdp-2004.md
examples/: __init__.py  kernel_ridge_regression.py  mmd_test.py  random_fourier_features.py
tests/: __init__.py  conftest.py  test_kernel_ridge_regression.py  test_mmd_test.py  test_random_fourier_features.py
(+17 files in other folders)
